CREATE TABLE COURSE (
    COURSE_NR                   INT NOT NULL CONSTRAINT COURSE_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    NAME                        VARCHAR(50),
    DESCRIPTION                 VARCHAR(150),
    DURATION_OF_APPOINTMENT     DOUBLE,
    AMOUNT_OF_APPOINTMENTS      INT
);

CREATE TABLE INSTRUCTOR (
    INSTRUCTOR_NR               INT NOT NULL CONSTRAINT INSTRUCTOR_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    FIRST_NAME                  VARCHAR(50),
    LAST_NAME                   VARCHAR(50),
    PHONE_NR                    VARCHAR(20),
    EMAIL                       VARCHAR(75)
);

CREATE TABLE APPOINTMENT (
    APPOINTMENT_NR              INT NOT NULL CONSTRAINT APPOINTMENT_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
    START                       DATE,
    INSTRUCTOR_NR               INT CONSTRAINT APP_FK REFERENCES INSTRUCTOR(INSTRUCTOR_NR),
    COURSE_NR                   INT CONSTRAINT COURSE_FK REFERENCES COURSE(COURSE_NR)
);

CREATE TABLE PARTICIPANT (
     PARTICIPANT_NR             INT NOT NULL CONSTRAINT PARTICIPANT_PK PRIMARY KEY GENERATED ALWAYS AS IDENTITY,
     FIRST_NAME                 VARCHAR(50),
     LAST_NAME                  VARCHAR(50),
     YEAR_OF_BIRTH              INT,
     PHONE_NR                   VARCHAR(20),
     EMAIL                      VARCHAR(75)
);

CREATE TABLE REGISTRATION (
    PARTICIPANT_NR              INT NOT NULL,
    APPOINTMENT_NR              INT NOT NULL,
    CONSTRAINT PAR_APP_PK PRIMARY KEY (PARTICIPANT_NR, APPOINTMENT_NR),
    CONSTRAINT REG_PAR_FK FOREIGN KEY (PARTICIPANT_NR) REFERENCES PARTICIPANT(PARTICIPANT_NR),
    CONSTRAINT REG_APP_FK FOREIGN KEY (APPOINTMENT_NR) REFERENCES APPOINTMENT(APPOINTMENT_NR)
);


