@startuml
skinparam linetype ortho

class Participant {
    fName: String
    lName: String
    yearOfBirth: Integer
    phoneNr: String
    email: String
}

class Course {
    name: String
    description: String
    minutesPerAppointment: Integer
    amountOfAppointments: Integer
}

class Appointment  {
    start: LocalDateTime
}

class Instructor {
    fName: String
    lName: String
    phoneNr: String
    email: String
}

Appointment "*" -- "1" Instructor

Course "1" <-- "*" Appointment
Appointment "*" -- "*" Participant
(Appointment,Participant) . Registration


@enduml